Add nice spacing for gems. Fix weird newlines generated by ERB by changing trim_mode.

--- a/lib/gemfiler/templates/gemfile.erb
+++ b/lib/gemfiler/templates/gemfile.erb
@@ -1,12 +1,15 @@
-<%= sources.join("\n") %>
-<%= gemspec %>
-<%= ruby %>
-<% uncategorized_gems.each do |gem_line| %>
-<%= gem_line %><% end %>
+<%= sources.join("\n") %> 
+<%= gemspec %> 
+<%= ruby %> 
+<% uncategorized_gems.each do |gem| %>
+<%= gem %> 
+<% end %>
 
 <% groups.each do |group, gems| %>
 group <%= group.map{|g| type_value(g.to_sym) }.join(', ') %> do
-  <% gems.each do |gem| %><%= gem_line(gem) %>
-  <% end %>
+<% gems.each do |gem| %>
+  <%= gem_line(gem, group) %>
+<% end %>
 end
+
 <% end %>
